Using Require to check states and arguments