@@ -3,6 +3,7 @@ package de.ariesbuildings.options;
 import com.google.common.collect.Maps;
 import lombok.Getter;
 import lombok.Setter;
+import me.noci.quickutilities.utils.Require;
 
 import java.util.Map;
 import java.util.Set;
@@ -13,8 +14,8 @@ public class OptionMap<K> {
 
     public <T> void set(K key, T value) {
         Value<T> cache = (Value<T>) getCached(key, value.getClass());
-        if (cache.getValue() != null && !cache.getValue().getClass().equals(value.getClass()))
-            throw new UnsupportedOperationException(String.format("Used wrong type for %s. Used type '%s' requires type '%s'", key, value.getClass(), cache.getValue().getClass()));
+        Require.checkState(() -> cache.getValue() == null || cache.getValue().getClass().equals(value.getClass()),
+                "Used wrong type for %s. Used type '%s' requires type '%s'".formatted(key, value.getClass(), cache.getValue().getClass()));
         cache.setValue(value);
     }
 
